# snakemake-workflow-tool

./: README.md  setup.cfg
src/workflowtool/: Snakefile  __main__.py  workflowtool.yaml
src/workflowtool/cli/: init.py  run.py
