[metadata]
name = workflowtool
author = The authors
author_email =
url = https://github.com/NBISweden/snakemake-workflow-tool/
description = Workflow for the analysis of data
license = CC0-1.0
version = 0.1.0
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
python_requires = >=3.8
packages = find:
package_dir =
    =src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    workflowtool = workflowtool.__main__:main

[options.package_data]
* =
    Snakefile
    workflowtool.yaml
